# crypto-news

./: .gitignore  Dockerfile.app  Dockerfile.scheduler  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
app/: crypto_api.py  database.py  main.py  models.py
app/prompts/: __init__.py  crypto_news_prompt.py
app/tools/: __init__.py  health_tool.py  news_tool.py  search_tool.py
data/: init.sql
scripts/: llm_comm.py  news_scheduler.py  openai_comm.py  test_cmc_api.py
scripts/archive/: ollama_comm.py
